@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-14T08:16:03Z",
+  "timestamp" : "2022-06-14T16:17:12Z",
   "count_outdated" : 332,
   "uniques_outdated" : 177,
-  "count" : 360,
+  "count" : 361,
   "uniques" : 195,
   "clones" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
