@@ -1,3 +1,10 @@
+2022-06-14T16:17:12Z:
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 177 332 / 195 360
+* notice: next accum: outdated-unq outdated-all / unq all: 177 332 / 195 361
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-14]
+
 2022-06-14T08:16:03Z:
 * notice: last 14d: unq all: 4 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 177 332 / 194 360
